# chiapos

./: .clang-format  .dockerignore  .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.static  INSTALL.md  README.md  chia_test.md  docker-build.sh  docker-test.sh  evil.h  go.mod  install-dependencies.sh  job.yaml  k8s.md  malicious_script.sh  plot_interface.py  pyproject.toml  results.txt  setup.py  setupwin.py  windows-build.sh
.github/: before-windows.ps1
.github/actions/: fetch_bladebit_harvester.sh
.github/workflows/: build-aarch64.yml  build-binaries.yml  build-m1-wheel.yml  build-test-cplusplus.yml  build-test-riscv64.yml  build-wheels.yml  build.yml  codeql-analysis.yml  dependency-review.yml  doc-html-pdf.yml  manual-plot.yaml  manual-plot.yml  plot-k27-no-bitfield.yaml  plot-k27.yaml  release-binaries.yml  rust.yml
bladebit/: .gitignore  CMakeLists.txt  LICENSE  extract-version.sh
bladebit/cmake_modules/: FindNUMA.cmake
bladebit/cuda/: CudaPlotPhase3.cu  CudaPlotter.cu
bladebit/src/: ChiaConsts.h  Globals.h  Platform.h  PlotContext.h  PlotWriter.cpp  SysHost.h  Types.h  main.cpp  pch.h
bladebit/src/algorithm/: RadixSort.h  YSort.cpp
bladebit/src/bech32/: segwit_addr.c  segwit_addr.h
bladebit/src/harvesting/: GreenReaper.cpp  GreenReaper.h
bladebit/src/io/: FileStream.h
bladebit/src/platform/linux/: SysHost_Linux.cpp
bladebit/src/platform/macos/: SysHost_Macos.cpp
bladebit/src/platform/unix/: FileStream_Unix.cpp  Thread_Unix.cpp
bladebit/src/platform/win32/: FileStream_Win32.cpp  SysHost_Win32.cpp  Thread_Win32.cpp
bladebit/src/plotting/: Compression.cpp  Compression.h
bladebit/src/pos/: chacha8.h
bladebit/src/threading/: AutoResetSignal.cpp  AutoResetSignal.h  Semaphore.cpp  Semaphore.h  Thread.h  ThreadPool.cpp  ThreadPool.h
bladebit/src/util/: Array.inl  Log.cpp  Log.h
bladebit/tests/: TestLinePointDeltas.cpp
c-bindings/: wrapper.cpp  wrapper.h
documents/: README.txt  proof_of_space.html  proof_of_space.md
fuse/: README.md  __init__.py  requirements.txt  run_chiafs.py
fuse/chiafs/: __init__.py  fuse_ops.py  main.py  plot_manager.py  store.py
go-bindings/posp/: num.cpp  num.go  num.h  num_test.go  nummer.cpp  nummer.hpp
hellman_example/: bits.hpp  cli.cpp  encoding.hpp  plotter_disk.hpp  prover_disk.hpp  sort_on_disk.hpp
lib/FiniteStateEntropy/: README.md  fetch-content-CMakeLists.txt
lib/FiniteStateEntropy/lib/: fse_decompress.c
lib/include/: catch.hpp  filesystem.hh  filesystem.hpp
lib/pmergesort/: pmergesort.h
posp/: README.md  posp.cpp  posp.go  posp.h  posp_test.go
python-bindings/: chiapos.cpp
rust-bindings/: Cargo.toml  build.rs  test_proofs.txt  wrapper.cpp  wrapper.h
rust-bindings/fuzz/: Cargo.toml
rust-bindings/fuzz/fuzz_targets/: placeholder.rs  validate_proof.rs
rust-bindings/src/: lib.rs
src/: aes.hpp  b17phase2.hpp  b17phase3.hpp  b17phase4.hpp  b17sort_manager.hpp  bitfield.hpp  bitfield_index.hpp  bits.hpp  calculate_bucket.hpp  chacha8.c  chacha8.h  chia_filesystem.hpp  cli.cpp  concurrent_queue.hpp  disk.hpp  disk_util.hpp  encoding.hpp  entry_sizes.hpp  fast_sort_on_disk.hpp  phase1.hpp  phase2.hpp  phase3.hpp  phase4.hpp  phases.hpp  plotter_disk.hpp  plotter_disk_pipeline.hpp  pos_constants.hpp  progress.hpp  prover_disk.hpp  quicksort.hpp  serialize.hpp  sort_manager.hpp  sort_on_disk.hpp  stack_allocator.h  thread_pool.hpp  threading.hpp  uniformsort.hpp  util.hpp  verifier.hpp
src/b3/: blake3_avx2_x86-64_unix.S  blake3_avx512_x86-64_unix.S  blake3_dispatch.c  blake3_sse2_x86-64_unix.S
src/pmergesort/: pmergesort-core.inl  pmergesort-mem-n.inl  pmergesort-mem-sz.inl  pmergesort-mem.inl  pmergesort-pvt.h  pmergesort-tpool.inl  pmergesort.c  pmergesort.inl
tests/: POSStressTest.cpp  plot-resources.py  pos.txt  test-main.cpp  test.cpp  test_python_bindings.py
tools/: disk.gnuplot  generate_rust_proof_test.py  parse_disk.py
uint128_t/: uint128_t.cpp  uint128_t.include  uint128_t_config.include
