[package]
name = "chiapos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.chiapos]
path = ".."

[[bin]]
name = "validate_proof"
path = "fuzz_targets/validate_proof.rs"
test = false
doc = false
bench = false
